all test now pass, fixed minor bugs